# rf-foundry

./: README.md  pyproject.toml
cache/: .cache_metadata.json
configs/execution/: kite_broker.yaml
configs/experiments/: active_trading.yaml  exp001_baseline.yaml  frequent_trading.yaml  frequent_trading_quick.yaml  regime_action_mask.yaml  regime_detection.yaml
configs/orchestration/: live_eod.yaml  paper_eod.yaml
configs/position_sizing/: fixed.yaml  kelly.yaml  risk_parity.yaml  volatility.yaml
examples/: explain_trades.py  train_with_cnn.py  validate_explainability.py
scripts/: backtest.py  compare_eod_vs_intraday.py  dashboard.py  deploy_paper_trading.py  generate_intraday_report.py  inference.py  orchestrate.py  predict.py  quick_validate_cnn.py  test_paper_deployment.py  test_pipeline.py  train.py  train_cnn_example.py  train_colab.py  train_intraday.py  validate_regime.py
src/tradebox/: __init__.py
src/tradebox/agents/: __init__.py  base_agent.py  callbacks.py  config.py  ppo_agent.py  serialization.py  trainer.py
src/tradebox/backtest/: __init__.py  analyzer.py  config.py  engine.py  metrics.py  report.py
src/tradebox/dashboard/: __init__.py  app.py  charts.py  report.py  utils.py
src/tradebox/data/: splitter.py  validation.py
src/tradebox/env/: __init__.py  action_mask.py  costs.py  intraday_env.py  rewards.py  trading_env.py  wrappers.py
src/tradebox/execution/: __init__.py  base_broker.py  config.py  exceptions.py  kite_broker.py  paper_broker.py  retry.py
src/tradebox/explainability/: README.md  __init__.py  attention_viz.py  text_generator.py  trade_explainer.py
src/tradebox/features/: __init__.py  analyzer.py  extractor.py  regime.py  technical.py
src/tradebox/models/: __init__.py  cnn_extractor.py  feature_extractor.py  hybrid_extractor.py  trading_cnn.py  trading_cnn_extractor.py
src/tradebox/monitoring/: __init__.py  aggregator.py  collector.py  events.py  query.py  schemas.py  store.py
src/tradebox/orchestration/: __init__.py  config.py  exceptions.py  scheduler.py  state.py  workflow.py
src/tradebox/risk/: __init__.py  circuit_breakers.py  position_sizers.py  validators.py
tests/: __init__.py
tests/integration/: test_action_mask_env.py  test_env_validation.py  test_intraday_pipeline.py  test_kite_broker_integration.py  test_techno_fundamental_env.py
tests/unit/: __init__.py  test_smoke.py
(+31 files in other folders)
