[tool.poetry]
name = "tradebox-rl"
version = "0.1.0"
description = "Production-ready reinforcement learning based trading system for Indian equity markets"
authors = ["Gopal Joshi <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tradebox", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29"
stable-baselines3 = "^2.2"
torch = "^2.1"
pandas = "^2.1"
numpy = "^1.26"
yfinance = "^0.2"
ta = "^0.11"
pyarrow = "^14.0"
pydantic = "^2.5"
omegaconf = "^2.3"
hydra-core = "^1.3"
tensorboard = "^2.15"
matplotlib = "^3.8"
plotly = "^5.18"
loguru = "^0.7"
optuna = "^3.5"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
kiteconnect = "^4.2"
pyyaml = "^6.0"
streamlit = "^1.52.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.7"
pre-commit = "^3.6"
captum = "^0.8.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pandas_ta.*",
    "yfinance.*",
    "nsepython.*",
    "plotly.*",
    "kiteconnect.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src/tradebox --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
